--- a/frontend/home_packages/suplyformat.ejs
+++ b/frontend/home_packages/suplyformat.ejs
@@ -45,7 +45,7 @@
       <a href="#" class="nav-link"><i class="fas fa-calendar-alt"></i> Calendar</a>
       <a href="/Dashboard/view/suppliers" class="nav-link active"><i class="fas fa-users"></i> Suppliers</a>
       <a href="/Dashboard/booking" class="nav-link"><i class="fas fa-bookmark"></i> Bookings</a>
-      <a href="#" class="nav-link"><i class="fas fa-clipboard-list"></i> Tasks</a>
+       <a href="/dashboard/decor" class="nav-link "><i class="fas fa-image"></i> Decor</a>
       <a href="#" class="nav-link"><i class="fas fa-file-invoice-dollar"></i> Invoices</a>
       <a href="#" class="nav-link"><i class="fas fa-cog"></i> Settings</a>
     </div>
