--- a/frontend/allpack/venues/venues.ejs
+++ b/frontend/allpack/venues/venues.ejs
@@ -754,7 +754,7 @@
                     <i class="fas fa-camera me-1"></i>PHOTO
                   </div>
                 <% } else { %>
-                  <video class="card-media" data-index="<%=globalIndex%>" preload="metadata" playsinline muted>
+                  <video class="card-media" data-index="<%=globalIndex%>" preload="auto" playsinline muted autoplay loop>
                     <source src="/all_disk/decor_images/<%=file.filePath%>" type="video/<%=file.filePath.split('.').pop()%>">
                   </video>
                   <!-- Video Badge -->
