--- a/frontend/allpack/venues/venues.ejs
+++ b/frontend/allpack/venues/venues.ejs
@@ -714,7 +714,8 @@
         <li class="nav-item"><a class="nav-link" href="/about"><i class="fas fa-info-circle me-1"></i> About</a></li>
         <li class="nav-item"><a class="nav-link" href="/packages"><i class="fas fa-gift me-1"></i> Packages</a></li>
         <li class="nav-item"><a class="nav-link" href="/suppliers"><i class="fas fa-camera me-1"></i> Suppliers</a></li>
-        <li class="nav-item"><a class="nav-link active" href="/booking"><i class="fas fa-bookmark me-1"></i> Book Consultation</a></li>
+         <li class="nav-item"><a class="nav-link " href="/contact"><i class="fas fa-envelope me-1"></i> Contact</a></li>
+        <li class="nav-item"><a class="nav-link " href="/booking"><i class="fas fa-bookmark me-1"></i> Book Consultation</a></li>
       </ul>
     </div>
   </div>
