--- a/frontend/home_packages/bookingformat.ejs
+++ b/frontend/home_packages/bookingformat.ejs
@@ -38,10 +38,12 @@
       <h2><i class="fas fa-heart"></i> Wedding Planner</h2>
     </div>
     <div class="nav-links">
+      <a href="/home" class="nav-link"><i class="fas fa-home"></i> Back Home</a>
       <a href="/Dashboard/view/suppliers" class="nav-link"><i class="fas fa-users"></i> Suppliers</a>
       <a href="/Dashboard/booking" class="nav-link active"><i class="fas fa-bookmark"></i> Bookings</a>
        <a href="/dashboard/decor" class="nav-link "><i class="fas fa-image"></i> Decor</a>
-    </div>
+      <a href="/dashboard/troupe" class="nav-link "><i class="fas fa-drum"></i> Troupe</a>
+      </div>
     <div class="mt-auto">&copy; <%= new Date().getFullYear() %> Wedding Planner Pro</div>
   </nav>
 
