--- a/frontend/home_packages/bookingformat.ejs
+++ b/frontend/home_packages/bookingformat.ejs
@@ -43,7 +43,8 @@
       <a href="/Dashboard/booking" class="nav-link active"><i class="fas fa-bookmark"></i> Bookings</a>
        <a href="/dashboard/decor" class="nav-link "><i class="fas fa-image"></i> Decor</a>
       <a href="/dashboard/troupe" class="nav-link "><i class="fas fa-drum"></i> Troupe</a>
-      </div>
+      <a href="/dashboard/media" class="nav-link "><i class="fas fa-camera"></i> Photo & Video</a>  
+    </div>
     <div class="mt-auto">&copy; <%= new Date().getFullYear() %> Wedding Planner Pro</div>
   </nav>
 
