--- a/frontend/allpack/venues/decorformat.ejs
+++ b/frontend/allpack/venues/decorformat.ejs
@@ -339,6 +339,7 @@
       <a href="/Dashboard/booking" class="nav-link"><i class="fas fa-bookmark"></i> Bookings</a>
       <a href="/dashboard/decor" class="nav-link active"><i class="fas fa-image"></i> Decor</a>
       <a href="/dashboard/troupe" class="nav-link"><i class="fas fa-drum"></i> Troupe</a>
+       <a href="/dashboard/media" class="nav-link "><i class="fas fa-camera"></i> Photo & Video</a>
     </div>
     <div class="sidebar-footer">
       &copy; <%= new Date().getFullYear() %> Wedding Planner Pro
